# PK_modelling

./: .gitignore  1634823910.848397.json  1634827335.39259.json  LICENSE  README.md  definitions.py  dosing.py  dummy.json  index.rst  main.py  pk_model_main_pipeline.py  requirements.txt  setup.cfg  setup.py  solver.py  ux.py
.github/workflows/: check-systems-compat.yml  readthedocs.yml  run-flake8.yml  run-pytest.yml  run-unittests.yml
PK_modelling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: quickstart.rst.txt
docs/docs/doctrees/: environment.pickle  index 2.doctree  index.doctree
docs/docs/html/: .buildinfo  genindex.html  index 2.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs/html/_sources/: index.rst.txt
oxbiodtp_7_PK_modelling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pk_model/: definitions.py  dosing.py  solver.py  ux.py  visualiser.py
tests/: test_1.csv  test_definitions.py  test_dosing.py  test_json.json  test_json_sc.json  test_json_sc_2.json  test_solver.py  test_solver_IK.py  test_ux.py  test_visualiser.py
tests/__pycache__/: test_solver_IK.cpython-39-pytest-6.2.5.pyc~merged
