[metadata]
name = oxbiodtp_7_PK_modelling
version = 1.0.0
description = 'Library for producing, solving and visualising pharmacokinetic models.'
url = https://github.com/Software-Engineering-BBSRC-Group-6/PK_modelling
long_description = file: README.md
long_description_content_type = text/markdown
author = 'Dan Hudson, Ishaan Kapoor, Sam Johnson, Amit Halkhoree, Cameron Anderson, Joe Pollacco'
author_email = joseph.pollacco@dtc.ox.ac.uk
keywords = pharmokinetic, pharmacokinetic, compartment, ODE
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = False
packages = pk_model
    

